# ai_cookbook

./: .gitignore  README.md  pyproject.toml
01. LangGraph/: .gitignore  langgraph.json
01_building_basic_chatbot_using_langgraph/: .env.example  langgraph.json
02. Building-Apps-With-AI-Models/hume-quickstart/: package-lock.json
02. Building-Apps-With-AI-Models/hume-quickstart/components/: Chat.tsx  Nav.tsx
02_building_apps_with_ai-models/: Building_Apps_With_AI_Models.ipynb
02_building_apps_with_ai-models/hume-quickstart/: APPLICATION_GUIDE.md
02_building_apps_with_ai-models/hume-quickstart/components/: Expressions.tsx  StartCall.tsx
03_workflow_and_agent/: langgraph.json  pyproject.toml
03_workflow_and_agent/graph/: agent.py  evaluator_optimizer.py  example.py  orchestrator.py  parallelization.py  prompt_chaining.py  tools.py
03_workflow_and_agent/notebook/: workflows_and_agent.ipynb
04_using_workflows/: main.ipynb  n8n.json
04_using_workflows/Langflow/: RAG-QA-Flow.json
06_mcp/crash-course/4-openai-integration/: client.py
07_how_to_evaluate_agents/: langgraph.json  main.py  pyproject.toml
07_how_to_evaluate_agents/notebook/: introduction.ipynb
07_how_to_evaluate_agents/src/: agent.py
langgraph/basic_chatbot/graph/: graph.py
langgraph/basic_chatbot/notebooks/: basic_chatbot.ipynb
langgraph/basic_chatbot/python/: langgraph.json  pyproject.toml
